--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "db:reset": "prisma migrate reset"
   },
   "dependencies": {
+    "@daily-co/daily-js": "^0.85.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.18.0",
     "@solana/wallet-adapter-base": "^0.9.27",
